# animations-editor-bdmorph

./: .cproject  .project  BDMORPH.cpp  BDMORPH.h  CMakeLists.txt  KVF.cpp  KVF.h  README.txt  Utils.h  cholmod_matrix.cpp  cholmod_matrix.h  compile.html  deformationscene.cpp  deformationscene.h  doc.html  index.html  logspiral.cpp  logspiral.h  main.cpp  model2d.cpp  model2d.h  params.json  simplesparsematrix.cpp  simplesparsematrix.h  vector2d.h
GUI/: About.ui  AnimationPanel.cpp  AnimationPanel.h  AnimationPanel.ui  EditorWindow.cpp  EditorWindow.h  Main.cpp  MainScene.cpp  MainScene.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OffScreenRenderer.cpp  OffScreenRenderer.h  ProgramState.cpp  ProgramState.h  QVideoEncoder.cpp  QVideoEncoder.h  SidePanel.cpp  SidePanel.h  SidePanel.ui  ThumbnailRenderer.cpp  ThumbnailRenderer.h  deformationscene.cpp  deformationscene.h  graphics_view.cpp  graphics_view.h  main.cpp
GUI/icon/: macicon.icns  winicon.rc
GUI/resources/: resources.rc
GUI/widgets/: ActionButton.cpp  ActionButton.h
cmake/: old.txt
cmake/Modules/: FindSUITESPARESE.cmake
core/: BDMORPH.cpp  BDMORPH.h  KVF.cpp  KVFModel.cpp  KVFModel.h  MeshModel.cpp  MeshModel.h  Model.cpp  Model.h  OutlineModel.cpp  OutlineModel.h  VideoModel.cpp  VideoModel.h  model2d.cpp  model2d.h
doc/: README.txt
stylesheets/: styles.css
utils/: Utils.h  cholmod_common.cpp  cholmod_common.h  cholmod_matrix.cpp  cholmod_matrix.h  cholmod_vector.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  triangle.c  triangle.h  utils.cpp  utils.h  vector2d.cpp  vector2d.h
